--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -7,5 +7,60 @@
 .container {
     width: 100vw;
     height: 100vh;
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-bar {
+    width: 100vw;
+    height: 15vh;
+    background-color: rgb(25,25,25);
+    border-bottom: 2px solid orange;
+}
+
+.main-page {
+    width: 100vw;
+    height: 85vh;
+    background-color: rgb(25,25,25);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-wrapper {
+    width: 60vw;
+    height: 40vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-left: 2px solid orange;
+    border-right: 2px solid orange;
+}
+
+.btn {
+    width: 15vw;
+    height: 15vh;
+    background-color: rgb(25,25,25);
+    padding: 5px;
+    margin: 10px;
+    border: 2px solid royalblue;
+    border-radius: 5px;
+    transition: 500ms;
+    font-size: 1rem;
+    color: orange;
+    cursor: pointer;
+}
+
+.btn:hover {
+    border-color: orange;
+    color: royalblue;
+}
+
+.smile {
+    width: 15vw;
+    height: 10vh;
+    border-bottom: 2px solid orange;
 }
