--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -18,8 +18,31 @@
 .nav-bar {
     width: 100vw;
     height: 10vh;
+    padding: 1vh 3vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: rgb(25,25,25);
-    border-bottom: 2px solid orange;
+    border-bottom: 2px solid brown;
+}
+
+.nav-title {
+    color: rgba(255,255,255,.75);
+}
+
+.nav-btn {
+    margin-left: 2vw;
+    padding-bottom: 3px;
+    background: none;
+    border: none;
+    border-bottom: 1px solid transparent;
+    color: rgba(255,255,255,.75);
+    cursor: pointer;
+    transition: 500ms;
+}
+
+.nav-btn:hover {
+    border-color: rgba(255,255,255,.75);
 }
 
 .main-page {
@@ -162,10 +185,20 @@
     overflow: auto;
 }
 
+.panier {
+    width: 100vw;
+    height: 90vh;
+    background-color: rgb(25,25,25);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .footer {
     width: 100vw;
     height: 10vh;
     background-color: rgb(25,25,25);
-    border-top: 2px solid orange;
+    border-top: 2px solid brown;
 }
