--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -65,7 +65,7 @@
     border-right: 2px solid orange;
 }
 
-.btn {
+.main-btn {
     width: 15vw;
     height: 15vh;
     background-color: rgb(25,25,25);
@@ -79,7 +79,7 @@
     cursor: pointer;
 }
 
-.btn:hover {
+.main-btn:hover {
     border-color: orange;
     color: royalblue;
 }
@@ -124,6 +124,10 @@
     transition: 100ms;
 }
 
+.book-title {
+    letter-spacing: 1px;
+}
+
 .book-cover {
     width: 100%;
     height: 100%;
@@ -165,24 +169,71 @@
 }
 
 .book-btn-wrapper button {
-    padding-bottom: 2px;
+    padding-bottom: 3px;
     border: none;
     background-color: transparent;
-    border-bottom: 1px solid rgba(255,255,255,.75);
+    border-bottom: 1px solid transparent;
     color: rgba(255,255,255,.75);
     font-size: 1rem;
     cursor: pointer;
+    transition: 500ms;
+}
 
+.book-btn-wrapper button:hover {
+    border-color: brown;
+    color: orange;
 }
 
 .more-info {
     position: absolute;
     width: 50vw;
     height: 60vh;
-    padding: 5px;
+    padding: 5vh 2vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(25,25,25);
+    border-radius: 5px;
     color: rgba(255,255,255,.75);
+    letter-spacing: 2px;
     overflow: auto;
+}
+
+.synop-btn {
+    margin: 2vh 0;
+    background: none;
+    border: none;
+    color: orange;
+    cursor: pointer;
+}
+
+.close-btn {
+    position: absolute;
+    right: 1%;
+    top: 1%;
+    background: none;
+    border: none;
+    padding: 3px;
+    color: orange;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    color: brown;
+}
+
+.synopsis-list {
+    list-style: none;
+    text-align: justify;
+}
+
+.synopsis-list li {
+    margin-top: 3px;
+}
+
+.synopsis-first {
+    margin-top: 3vh;
 }
 
 .panier {
@@ -193,6 +244,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.pop-out {
+    width: 30vw;
+    height: 15vh;
+    position: absolute;
+    top: 5%;
+    padding: 2vh 2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(25,25,25);
+    border: 2px solid orange;
+    border-radius: 3px;
+    color: rgba(255,255,255,.75);
+    letter-spacing: 2px;
 }
 
 
