--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -253,18 +253,23 @@
     margin-top: 3vh;
 }
 
-.panier, .empty-cart, .full-cart {
+.panier {
     width: 100vw;
     height: 90vh;
     background-color: rgb(25,25,25);
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .empty-cart {
+    width: 100vw;
+    height: 90vh;
+    background-color: rgb(25,25,25);
+    display: flex;
+    flex-direction: column;
     justify-content: space-around;
+    align-items: center;
 }
 
 .empty-cart h2 {
@@ -273,34 +278,40 @@
 }
 
 .full-cart {
-    flex-direction: row;
+    width: 100vw;
+    height: 90vh;
+    background-color: rgb(25,25,25);
+    display: flex;
+    justify-content: center;
 }
 
 .panier-list {
+    list-style: none;
     width: 50vw;
-    height: 90vh;
-    padding-top: 2vh;
-    display: flex;
-    justify-content: center;
-    border-right: 1px solid rgba(255,255,255,.75);
+    height: 70vh;
+    margin-top: 10vh;
+    margin-left: 5vw;
+    padding: 5vh 5vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: stretch;
+    justify-content: space-around;
+    border: 2px solid orange;
+    border-radius: 3px;
     overflow: auto;
 }
 
-.panier-list ul {
-    list-style: none;
-    padding-top: 5vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.panier-book {
+    width: 22vw;
+    height: 25vh;
+    margin-bottom: 3vh;
 }
 
-.panier-list ul li {
-    margin-bottom: 2vh;
-}
 
 .panier-price {
     width: 50vw;
     height: 90vh;
-    border-left: 1px solid rgba(255,255,255,.75);
+    color: rgba(255,255,255,.75);
 }
 
 .pop-out {
@@ -325,4 +336,26 @@
     height: 10vh;
     background-color: rgb(25,25,25);
     border-top: 2px solid brown;
+}
+
+
+::-webkit-scrollbar {
+    width: 15px;
+                
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: royalblue; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: orange;
+                
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: brown;
 }
