--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -4,6 +4,27 @@
     box-sizing: border-box;
 }
 
+p {
+    color: rgba(255,255,255,.75);
+    letter-spacing: 0.5rem;
+    text-align: justify;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    color: orange;
+    text-decoration: none;
+    letter-spacing: 0.25rem;
+    font-size: 1rem;
+}
+
+h3 {
+    font-family: monospace;
+}
+
 .container {
     width: 100vw;
     height: 100vh;
@@ -127,7 +148,6 @@
     grid-template-columns: 1fr 1fr 1fr;
     align-items: stretch;
     justify-content: space-around;
-    list-style: none;
     overflow: auto;
 }
 
@@ -241,7 +261,6 @@
 }
 
 .synopsis-list {
-    list-style: none;
     text-align: justify;
 }
 
@@ -286,7 +305,6 @@
 }
 
 .panier-list {
-    list-style: none;
     width: 50vw;
     height: 70vh;
     margin-top: 10vh;
@@ -296,7 +314,7 @@
     grid-template-columns: 1fr 1fr;
     align-items: stretch;
     justify-content: space-around;
-    border: 2px solid orange;
+    border: 2px solid brown;
     border-radius: 3px;
     overflow: auto;
 }
@@ -311,7 +329,27 @@
 .panier-price {
     width: 50vw;
     height: 90vh;
+    padding: 2vh 5vw;
     color: rgba(255,255,255,.75);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.offers-panier {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.price-list {
+    margin-top: 3vh;
+}
+
+.price-list li div {
+    margin-top: 3vh;
 }
 
 .pop-out {
