--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -1,17 +1,37 @@
-.footer {
-    width: 100vw;
-    height: 13vh;
-    padding: 0 5vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgb(25,25,25);
-    border-top: 2px solid brown;
+@media only screen and (min-width: 649px) {
+    .footer {
+        width: 100vw;
+        height: 13vh;
+        padding: 0 5vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: rgb(25,25,25);
+        border-top: 2px solid brown;
+    }
+    .footer .right-part {
+        width: 30vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
-.footer .right-part {
-    width: 30vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+@media only screen and (max-width: 648px) {
+    .footer {
+        width: 100vw;
+        height: 12vh;
+        padding: 0 1vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: rgb(25,25,25);
+        border-top: 1px solid brown;
+    }
+    .footer .right-part {
+        width: 25vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
