--- a/client/src/styles/listPage.css
+++ b/client/src/styles/listPage.css
@@ -1,92 +1,187 @@
-.list-page {
-    width: 100vw;
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(25,25,25);
-    overflow: auto;
+@media only screen and (min-width: 648px) {
+    .list-page {
+        width: 100vw;
+        height: 90vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(25,25,25);
+        overflow: auto;
+    }
 
+    .book-list {
+        width: 75vw;
+        height: 75vh;
+        margin: 2vh 5vw;
+        background-color: rgb(25,25,25);
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: stretch;
+        justify-content: space-around;
+        overflow: auto;
+    }
+
+    .book {
+        width: 20vw;
+        height: 22vh;
+        margin: 5px;
+        position: relative;
+        border: 1px solid rgba(255,255,255,.75);
+        border-radius: 2px;
+        transition: 100ms;
+    }
+    .book-title {
+        letter-spacing: 1px;
+    }
+
+    .book-btn-wrapper {
+        width: 20vw;
+        height: 10vh;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .book-btn-wrapper button {
+        padding-bottom: 3px;
+        border: none;
+        background-color: transparent;
+        border-bottom: 1px solid transparent;
+        color: rgba(255,255,255,.75);
+        font-size: 1rem;
+        cursor: pointer;
+        transition: 500ms;
+    }
+    .book-cover {
+        width: 100%;
+        height: 100%;
+    }
+    .book-hover-div {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        color: rgba(255,255,255,.75);
+        opacity: 0;
+        transition: 300ms;
+    }
+    
+    .book:hover {
+        border-color: rgb(25,25,25);
+    }
+    
+    .book:hover .book-cover {
+        opacity: 0.1;
+    }
+    
+    .book:hover .book-hover-div {
+        opacity: 1;
+    }
+    
+    .book-btn-wrapper button:hover {
+        border-color: brown;
+        color: orange;
+    }
 }
 
-.book-list {
-    width: 75vw;
-    height: 75vh;
-    margin: 2vh 5vw;
-    background-color: rgb(25,25,25);
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-items: stretch;
-    justify-content: space-around;
-    overflow: auto;
-}
 
-.book {
-    width: 20vw;
-    height: 22vh;
-    margin: 5px;
-    position: relative;
-    border: 1px solid rgba(255,255,255,.75);
-    border-radius: 2px;
-    transition: 100ms;
-}
 
-.book-title {
-    letter-spacing: 1px;
-}
 
-.book-cover {
-    width: 100%;
-    height: 100%;
-}
+@media only screen and (max-width: 648px) {
+    .list-page {
+        width: 100vw;
+        height: 70vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(25,25,25);
+        overflow: auto;
+    }
 
-.book-hover-div {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    color: rgba(255,255,255,.75);
-    opacity: 0;
-    transition: 300ms;
-}
+    .book-list {
+        width: 85vw;
+        height: 60vh;
+        margin: 2vh 1vw;
+        background-color: rgb(25,25,25);
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: stretch;
+        justify-content: space-around;
+        overflow: auto;
+    }
 
-.book:hover {
-    border-color: rgb(25,25,25);
-}
+    .book {
+        width: 20vw;
+        height: 17vh;
+        margin: 5px;
+        position: relative;
+        border: 1px solid rgba(255,255,255,.75);
+        border-radius: 2px;
+        transition: 100ms;
+    }
 
-.book:hover .book-cover {
-    opacity: 0.1;
-}
+    .book-title {
+        font-size: 10px;
+        text-align: center;
+    }
 
-.book:hover .book-hover-div {
-    opacity: 1;
-}
+    .book-btn-wrapper {
+        width: 20vw;
+        height: 5vh;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 
-.book-btn-wrapper {
-    width: 20vw;
-    height: 10vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
+    .book-btn-wrapper button {
+        padding-bottom: 1px;
+        border: none;
+        background-color: transparent;
+        border-bottom: 1px solid transparent;
+        color: rgba(255,255,255,.75);
+        font-size: 9px;
+        text-align: center;
+        cursor: pointer;
+        transition: 500ms;
+    }
+    .book-cover {
+        width: 100%;
+        height: 100%;
+    }
 
-.book-btn-wrapper button {
-    padding-bottom: 3px;
-    border: none;
-    background-color: transparent;
-    border-bottom: 1px solid transparent;
-    color: rgba(255,255,255,.75);
-    font-size: 1rem;
-    cursor: pointer;
-    transition: 500ms;
-}
-
-.book-btn-wrapper button:hover {
-    border-color: brown;
-    color: orange;
+    .book-hover-div {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        color: rgba(255,255,255,.75);
+        opacity: 0;
+        transition: 300ms;
+    }
+    
+    .book:hover {
+        border-color: rgb(25,25,25);
+    }
+    
+    .book:hover .book-cover {
+        opacity: 0.1;
+    }
+    
+    .book:hover .book-hover-div {
+        opacity: 1;
+    }
+    
+    .book-btn-wrapper button:hover {
+        border-color: brown;
+        color: orange;
+    }
 }
