--- a/client/src/styles/mainPage.css
+++ b/client/src/styles/mainPage.css
@@ -1,12 +1,56 @@
-.main-page {
-    width: 100vw;
-    height: 90vh;
-    background-color: rgb(25,25,25);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+@media only screen and (min-width: 648px) {
+    .main-page {
+        width: 100vw;
+        height: 90vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .main-btn {
+        width: 15vw;
+        height: 15vh;
+        background-color: rgb(25,25,25);
+        padding: 5px;
+        margin: 10px;
+        border: 2px solid royalblue;
+        border-radius: 5px;
+        transition: 500ms;
+        font-size: 1rem;
+        color: orange;
+        cursor: pointer;
+    }
 }
+
+@media only screen and (max-width: 648px) {
+    .main-page {
+        width: 100vw;
+        height: 70vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .main-btn {
+        width: 15vw;
+        height: 10vh;
+        background-color: rgb(25,25,25);
+        padding: 3px;
+        margin: 10px;
+        border: 2px solid royalblue;
+        border-radius: 5px;
+        transition: 500ms;
+        font-size: 0.75rem;
+        color: orange;
+        cursor: pointer;
+    }
+}
+
+
 
 .btn-wrapper {
     width: 60vw;
@@ -16,20 +60,6 @@
     align-items: center;
     border-left: 2px solid orange;
     border-right: 2px solid orange;
-}
-
-.main-btn {
-    width: 15vw;
-    height: 15vh;
-    background-color: rgb(25,25,25);
-    padding: 5px;
-    margin: 10px;
-    border: 2px solid royalblue;
-    border-radius: 5px;
-    transition: 500ms;
-    font-size: 1rem;
-    color: orange;
-    cursor: pointer;
 }
 
 .main-btn:hover {
