--- a/client/src/styles/moreInfo.css
+++ b/client/src/styles/moreInfo.css
@@ -1,17 +1,39 @@
-.more-info {
-    position: absolute;
-    width: 50vw;
-    height: 60vh;
-    padding: 5vh 2vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(25,25,25);
-    border-radius: 5px;
-    color: rgba(255,255,255,.75);
-    letter-spacing: 2px;
-    overflow: auto;
+@media only screen and (min-width: 648px) {
+    .more-info {
+        position: absolute;
+        width: 50vw;
+        height: 60vh;
+        padding: 5vh 2vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgb(25,25,25);
+        border-radius: 5px;
+        color: rgba(255,255,255,.75);
+        letter-spacing: 2px;
+        overflow: auto;
+    }
 }
+
+@media only screen and (max-width: 648px) {
+    .more-info {
+        position: absolute;
+        width: 55vw;
+        height: 60vh;
+        padding: 5vh 3vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgb(25,25,25);
+        border-radius: 5px;
+        color: rgba(255,255,255,.75);
+        letter-spacing: 1px;
+        font-size: 10px;
+        overflow: auto;
+    }
+}
+
+
 
 .synop-btn {
     margin: 2vh 0;
