--- a/client/src/styles/panier.css
+++ b/client/src/styles/panier.css
@@ -1,66 +1,149 @@
-.panier {
-    width: 100vw;
-    height: 90vh;
-    background-color: rgb(25,25,25);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@media only screen and (min-width: 648px) {
+    .panier {
+        width: 100vw;
+        height: 90vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .empty-cart {
+        width: 100vw;
+        height: 75vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .empty-cart h2 {
+        color: orange;
+        letter-spacing: 2rem;
+    }
+
+    .panier-book {
+        width: 20vw;
+        height: 25vh;
+        margin-bottom: 3vh;
+    }
+
+    .panier-price {
+        width: 50vw;
+        height: 75vh;
+        padding: 2vh 5vw;
+        color: rgba(255,255,255,.75);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .full-cart {
+        width: 100vw;
+        height: 75vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        justify-content: center;
+    }
+
+    .panier-list {
+        width: 50vw;
+        height: 60vh;
+        margin-top: 10vh;
+        margin-left: 5vw;
+        padding: 5vh 5vw 0 5vw;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: stretch;
+        justify-content: space-around;
+        overflow: auto;
+    }
+
+    .price-list {
+        margin-top: 3vh;
+    }
+    
+    .price-list li div {
+        margin-top: 3vh;
+    }
 }
 
-.empty-cart {
-    width: 100vw;
-    height: 75vh;
-    background-color: rgb(25,25,25);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
+@media only screen and (max-width: 648px) {
+    .panier {
+        width: 100vw;
+        height: 70vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-.empty-cart h2 {
-    color: orange;
-    letter-spacing: 2rem;
-}
+    .empty-cart {
+        width: 100vw;
+        height: 70vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
 
-.full-cart {
-    width: 100vw;
-    height: 75vh;
-    background-color: rgb(25,25,25);
-    display: flex;
-    justify-content: center;
-}
+    .empty-cart h2 {
+        color: orange;
+        letter-spacing: 0.5rem;
+    }
 
-.panier-list {
-    width: 50vw;
-    height: 60vh;
-    margin-top: 10vh;
-    margin-left: 5vw;
-    padding: 5vh 5vw 0 5vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: stretch;
-    justify-content: space-around;
-    border: 2px solid brown;
-    border-radius: 3px;
-    overflow: auto;
-}
+    .panier-book {
+        width: 20vw;
+        height: 22vh;
+        margin-bottom: 2vh;
+    }
 
-.panier-book {
-    width: 22vw;
-    height: 25vh;
-    margin-bottom: 3vh;
-}
+    .panier-price {
+        width: 50vw;
+        height: 70vh;
+        padding: 1vh 3vw;
+        color: rgba(255,255,255,.75);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+        letter-spacing: 0.1rem;
+        text-align: center;
+    }
 
+    .full-cart {
+        width: 100vw;
+        height: 75vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        justify-content: center;
+    }
 
-.panier-price {
-    width: 50vw;
-    height: 75vh;
-    padding: 2vh 5vw;
-    color: rgba(255,255,255,.75);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    .panier-list {
+        width: 45vw;
+        height: 50vh;
+        margin-top: 5vh;
+        margin-left: 3vw;
+        padding: 10vh 3vw 0 3vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow: auto;
+    }
+
+    .price-list {
+        margin-top: 1vh;
+    }
+    
+    .price-list li div {
+        margin-top: 1vh;
+    }
+
 }
 
 .offers-panier {
@@ -70,10 +153,3 @@
     align-items: center;
 }
 
-.price-list {
-    margin-top: 3vh;
-}
-
-.price-list li div {
-    margin-top: 3vh;
-}
