--- a/client/src/styles/mainPage.css
+++ b/client/src/styles/mainPage.css
@@ -1,30 +1,21 @@
-@media only screen and (min-width: 648px) {
-    .main-page {
-        width: 100vw;
-        height: 90vh;
-        background-color: rgb(25,25,25);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
+@media only screen and (max-width: 768px) {
     .main-btn {
         width: 15vw;
-        height: 15vh;
+        height: 10vh;
         background-color: rgb(25,25,25);
-        padding: 5px;
+        padding: 3px;
         margin: 10px;
-        border: 2px solid royalblue;
+        border: 3px solid royalblue;
         border-radius: 5px;
         transition: 500ms;
-        font-size: 1rem;
+        font-size: 0.5rem;
+        font-family: "Bungee Hairline", cursive;
         color: orange;
         cursor: pointer;
     }
 }
 
-@media only screen and (max-width: 648px) {
+@media only screen and (max-width: 768px) {
     .main-page {
         width: 100vw;
         height: 70vh;
@@ -41,16 +32,43 @@
         background-color: rgb(25,25,25);
         padding: 3px;
         margin: 10px;
-        border: 2px solid royalblue;
+        border: 3px solid royalblue;
         border-radius: 5px;
         transition: 500ms;
         font-size: 0.75rem;
+        font-family: "Bungee Hairline", cursive;
         color: orange;
         cursor: pointer;
     }
 }
 
+@media only screen and (min-width: 768px) {
+    .main-page {
+        width: 100vw;
+        height: 90vh;
+        background-color: rgb(25,25,25);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
+    .main-btn {
+        width: 15vw;
+        height: 15vh;
+        background-color: rgb(25,25,25);
+        padding: 5px;
+        margin: 10px;
+        border: 3px solid royalblue;
+        border-radius: 5px;
+        transition: 500ms;
+        font-size: 1.5rem;
+        font-family: "Bungee Hairline", cursive;
+        color: orange;
+        font-weight: bold;
+        cursor: pointer;
+    }
+}
 
 .btn-wrapper {
     width: 60vw;
@@ -58,8 +76,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-left: 2px solid orange;
-    border-right: 2px solid orange;
+    border-left: 3px solid orange;
+    border-right: 3px solid orange;
 }
 
 .main-btn:hover {
@@ -70,5 +88,5 @@
 .smile {
     width: 15vw;
     height: 10vh;
-    border-bottom: 2px solid orange;
+    border-bottom: 3px solid orange;
 }
