--- a/client/src/styles/navBar.css
+++ b/client/src/styles/navBar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap');
+
 .nav-bar {
     width: 100vw;
     height: 10vh;
@@ -6,41 +8,80 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(25,25,25);
-    border-bottom: 2px solid brown;
+    border-bottom: 3px solid brown;
 }
 
 .nav-title {
     color: rgba(255,255,255,.75);
+    font-family: "Annie Use Your Telescope", monospace;
 }
 
 .nav-btn-wrapper {
     position: relative;
 }
 
-.nav-btn {
-    margin-left: 2vw;
-    padding-bottom: 3px;
-    background: none;
-    border: none;
-    border-bottom: 1px solid transparent;
-    color: rgba(255,255,255,.75);
-    cursor: pointer;
-    transition: 500ms;
-}
+
 
 .nav-btn:hover {
     border-color: rgba(255,255,255,.75);
 }
 
-.nav-panier-counter {
-    position: absolute;
-    right: 5%;
-    width: 1vw;
-    height: 1vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: orange;
-    font-family: monospace;
-    font-size: 1rem;
+
+
+@media only screen and (min-width: 648px) {
+    .nav-btn {
+        margin-left: 2vw;
+        padding-bottom: 3px;
+        background: none;
+        border: none;
+        border-bottom: 1px solid transparent;
+        color: rgba(255,255,255,.75);
+        font-family: monospace;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 500ms;
+    }
+
+    .nav-panier-counter {
+        position: absolute;
+        right: 3%;
+        width: 1vw;
+        height: 1vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: orange;
+        font-family: monospace;
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (max-width: 648px) {
+    .nav-btn {
+        margin-left: 5vw;
+        padding-bottom: 3px;
+        background: none;
+        border: none;
+        border-bottom: 1px solid transparent;
+        color: rgba(255,255,255,.75);
+        font-family: monospace;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 500ms;
+    }
+
+    .nav-panier-counter {
+        position: absolute;
+        right: 10%;
+        width: 1vw;
+        height: 1vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: orange;
+        font-family: monospace;
+        font-size: 1rem;
+    }
+
 }
